--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,42 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-header {
+  font-weight: 400;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+}
+
+.btn {
+  display: flex;
+  justify-self: left;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 10px 5%;
+  font: inherit;
+  font-size: 18px;
+  font-weight: 300;
+  border-radius: 10px;
+  border: 1px solid rgb(22, 65, 255);
+  background-color: transparent;
+  color: rgb(22, 65, 255);
+  width: 150px;
+  height: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar {
+  display: flex;
+  margin: 10px 2.5%;
+  padding-left: 5px;
+  font: inherit;
+  border: 1px solid black;
+  border-radius: 10px;
+  border: none;
+  color: black;
+  width: 200px;
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
